# PyElasticaVisualizer

./: .gitignore  README.md  pyproject.toml  qt_visualizer.py  qt_visualizer_background_loop.py  qt_visualizer_background_timer.py  qt_visualizer_test.py  qt_visualizer_timer.py  requirements.txt  try_me.py  utils.py  visualizer.py  working_example_qt_visualizer.py
examples/AxialStretchingCase/: axial_stretching.py
examples/Butterfly/: butterfly_simulation.py  butterfly_visualization.py
examples/ContinuumSnakeCase/: continuum_snake.py  continuum_snake_visualization.py
examples/FlexibleSwingingPendulumCase/: flexible_swinging_pendulum.py  flexible_swinging_visualization.py
examples/HelicalBucklingCase/: helical_buckling_visualization.py  helicalbuckling.py
examples/MuscularFlagella/: muscular_flagella.py
examples/MuscularSnake/: muscular_snake.py
examples/TaperedMuscle/: callback_load.py  fury_video_test.py  tapered_muscle_visualization.py  tapered_muslce_visualization.py
examples/TimoshenkoBeamCase/: timoshenko.py
